# SofaQtQuick

./: CMakeLists.txt
applications-dev/plugins/SofaQt3D/: CMakeLists.txt  SofaQt3D.h  SofaQt3DConfig.cmake.in  initSofaQt3d.cpp
applications-dev/plugins/SofaQt3D/SofaQt3D/: Qt3DModel.cpp  Qt3DModel.h
applications-dev/plugins/SofaQt3D/examples/: Qt3DModel.scn  Qt3DModel.scn.view  Qt3DModel_caduceus.scn  Qt3DModel_mapped.scn  Qt3DModel_quads.scn  floor.mtl
applications-dev/plugins/SofaQtQuickGUI/: CMakeLists.txt  SofaApplication.cpp  SofaQtQuickGUI.cpp  SofaScene.cpp  SofaScene.h
applications-dev/plugins/SofaQtQuickGUI/data/qml/: sofaQtQuickGUI_qml.qrc
applications-dev/plugins/SofaQtQuickGUI/data/qml/SofaWidgets/: Qt3DSofaViewer.qml  qmldir
applications-dev/plugins/SofaQtQuickGUI/examples/: Qt3DModel.scn
applications-dev/plugins/SofaQtQuickGUI/qt3d/: DrawToolQt3D.cpp  DrawToolQt3D.h  SofaEntity.cpp  SofaEntity.h
applications-dev/plugins/SofaQtQuickGUI/qt3d/data/qml/: qmldir  qt3dSofaQtQuickGUI_qml.qrc
applications-dev/plugins/SofaQtQuickGUI/src/SofaQtQuickGUI/: SofaScene.cpp  SofaViewer.cpp
applications-dev/plugins/SofaQtQuickGUI/src/SofaQtQuickGUI/Assets/: MeshAsset.cpp  PythonAsset.cpp  PythonAsset.h  TextureAsset.cpp
applications-dev/plugins/SofaQtQuickGUI/src/SofaQtQuickGUI/Bindings/: SofaBase.cpp
applications-dev/plugins/SofaQtQuickGUI/src/SofaQtQuickGUI/Models/: SofaSceneItemModel.cpp
applications-dev/plugins/SofaQtQuickGUI/src/SofaQtQuickGUI/Rendering/: ObjectRenderer.cpp
